force-app/main/default/objects/Case/fields/Telephone_fixe__c.field-meta.xml
<CustomField>
    <fullName>Telephone_fixe__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Téléphone Fixe</label>
    <type>Phone</type>
</CustomField>