force-app/main/default/objects/Case/fields/Type_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Type_d_intervention__c</fullName>
    <label>Type d&apos;intervention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Intervention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>