force-app/main/default/objects/Case/fields/Type_de_contact__c.field-meta.xml
<CustomField>
    <fullName>Type_de_contact__c</fullName>
    <label>Type de contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sans objet</fullName>
            </value>
            <value>
                <fullName>Courrier opérateur</fullName>
            </value>
            <value>
                <fullName>Courrier panéliste</fullName>
            </value>
            <value>
                <fullName>Contact technicien sortant</fullName>
            </value>
            <value>
                <fullName>Contact technicien entrant</fullName>
            </value>
            <value>
                <fullName>Mail opérateur</fullName>
            </value>
            <value>
                <fullName>Mail panéliste</fullName>
            </value>
            <value>
                <fullName>Message laissé par opérateur</fullName>
            </value>
            <value>
                <fullName>Message laissé par panéliste</fullName>
            </value>
            <value>
                <fullName>Message téléchargé</fullName>
            </value>
            <value>
                <fullName>Autre type de contact</fullName>
            </value>
            <value>
                <fullName>Ne répond pas</fullName>
            </value>
            <value>
                <fullName>Téléphone opérateur</fullName>
            </value>
            <value>
                <fullName>Téléphone panéliste</fullName>
            </value>
            <value>
                <fullName>Application panéliste</fullName>
            </value>
            <value>
                <fullName>Transfert d&apos;appel</fullName>
            </value>
            <value>
                <fullName>Mail entrant technicien</fullName>
            </value>
            <value>
                <fullName>Mail sortant technicien</fullName>
            </value>
            <value>
                <fullName>SMS opérateur</fullName>
            </value>
            <value>
                <fullName>SMS panéliste</fullName>
            </value>
            <value>
                <fullName>Site panéliste</fullName>
            </value>
            <value>
                <fullName>Indisponible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>