force-app/main/default/objects/Case/fields/Type_de_panel_Old2__c.field-meta.xml
<CustomField>
    <fullName>Type_de_panel_Old2__c</fullName>
    <label>Type de panel Old2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MMAT</fullName>
            </value>
            <value>
                <fullName>PaME</fullName>
            </value>
            <value>
                <fullName>AIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>