force-app/main/default/objects/Case/fields/Type_de_panel_Old__c.field-meta.xml
<CustomField>
    <fullName>Type_de_panel_Old__c</fullName>
    <formula>CASE(
				VALUE(TEXT(Account.Type_de_foyer__c)),
				VALUE($Label.ACC_Type_de_panel_Mediamat), $Label.ACC_Type_de_panel_Mediamat_Label,
				VALUE($Label.ACC_Type_de_panel_Pame), $Label.ACC_Type_de_panel_Pame_Label,
				TEXT(Account.Type_de_foyer__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de panel Old</label>
    <type>Text</type>
</CustomField>