force-app/main/default/objects/Case/recordTypes/Controle.recordType-meta.xml
<RecordType>
    <fullName>Controle</fullName>
    <active>true</active>
    <businessProcess>Contrôle</businessProcess>
    <label>Contrôle</label>
</RecordType>