force-app/main/default/objects/Case/recordTypes/Controle_AIP.recordType-meta.xml
<RecordType>
    <fullName>Controle_AIP</fullName>
    <active>true</active>
    <businessProcess>Controle AIP</businessProcess>
    <label>Contrôle AIP</label>
</RecordType>