force-app/main/default/objects/Case/recordTypes/Demande_Paneliste.recordType-meta.xml
<RecordType>
    <fullName>Demande_Paneliste</fullName>
    <active>true</active>
    <businessProcess>Autres</businessProcess>
    <label>Demande Panéliste</label>
</RecordType>