force-app/main/default/objects/Case/recordTypes/Demande_Paneliste_AIP.recordType-meta.xml
<RecordType>
    <fullName>Demande_Paneliste_AIP</fullName>
    <active>true</active>
    <businessProcess>Demande Paneliste AIP</businessProcess>
    <label>Demande panéliste AIP</label>
</RecordType>