force-app/main/default/objects/Case/recordTypes/Parrainage.recordType-meta.xml
<RecordType>
    <fullName>Parrainage</fullName>
    <active>true</active>
    <businessProcess>Parrainage</businessProcess>
    <label>Parrainage</label>
</RecordType>