force-app/main/default/objects/Case/validationRules/RV01_verification_du_statut.validationRule-meta.xml
<ValidationRule>
    <fullName>RV01_verification_du_statut</fullName>
    <active>true</active>
    <description>Règle qui empêche de rouvrir une requête.</description>
    <errorConditionFormula>AND(
				!$User.Bypass_validation_rules__c,
				ISCHANGED(Status),
				OR(
								TEXT(PRIORVALUE(Status)) = $Label.CAS_Statut_Cloture,
								TEXT(PRIORVALUE(Status)) = $Label.CASE_Statut_CloturePartiel,
								TEXT(PRIORVALUE(Status)) = $Label.CASE_Statut_ClotureNonTraite
				)
)</errorConditionFormula>
    <errorMessage>Vous ne pouvez plus modifier le statut de la requête une fois la requête clôturée.
Merci de créer une nouvelle requête</errorMessage>
</ValidationRule>