force-app/main/default/objects/Case/validationRules/RV02_motif_du_statut_requis.validationRule-meta.xml
<ValidationRule>
    <fullName>RV02_motif_du_statut_requis</fullName>
    <active>false</active>
    <description>Règle qui oblige la saisie du champ motif de statut quand la requête est en cours ou clôturée</description>
    <errorConditionFormula>AND(
				!$User.Bypass_validation_rules__c,
				TEXT(Status) = $Label.CAS_Statut_Cloture,
				ISBLANK(TEXT(Motif_de_statut__c))
)</errorConditionFormula>
    <errorDisplayField>Motif_de_statut__c</errorDisplayField>
    <errorMessage>Merci de renseigner le champ motif du statut</errorMessage>
</ValidationRule>