force-app/main/default/objects/Case/validationRules/RV03_ProchaineAction.validationRule-meta.xml
<ValidationRule>
    <fullName>RV03_ProchaineAction</fullName>
    <active>true</active>
    <description>Règle qui empêche le sauvegarde de la requête si prochaine action renseigné sans la date de prochaine action</description>
    <errorConditionFormula>AND(
!$User.Bypass_validation_rules__c,
OR( AND(TEXT(Prochaine_action__c)=null, NOT(ISBLANK(Date_prochaine_action__c))),
AND(TEXT(Prochaine_action__c)!=&apos;&apos;, ISBLANK(Date_prochaine_action__c))))</errorConditionFormula>
    <errorMessage>La prochaine action et la date de prochaine action doivent  être renseigné.</errorMessage>
</ValidationRule>