force-app/main/default/objects/Case/validationRules/RV05_IdFoyerEgalIdFoyerPaneliste.validationRule-meta.xml
<ValidationRule>
    <fullName>RV05_IdFoyerEgalIdFoyerPaneliste</fullName>
    <active>true</active>
    <description>Vérifier que le foyer panéliste et le foyer correspondent</description>
    <errorConditionFormula>AND(
				!$User.Bypass_validation_rules__c,
				 Account.Id !=  Foyer_paneliste__r.Foyer__r.Id)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Le foyer sélectionné n&apos;est pas celui du foyer panéliste</errorMessage>
</ValidationRule>