force-app/main/default/objects/Case/validationRules/RV07_subject_mail_to_case.validationRule-meta.xml
<ValidationRule>
    <fullName>RV07_subject_mail_to_case</fullName>
    <active>true</active>
    <description>Bloque la création de de case si les sujets des mail recu contient ces titres.</description>
    <errorConditionFormula>AND(
!$User.Bypass_validation_rules__c,
ISPICKVAL(Origin , &apos;Email entrant&apos;),
ISNEW(),
OR(
CONTAINS( Subject , $Label.CAS_Name_mailSubjectToBlock),
CONTAINS( Subject , $Label.CAS_Name_mailSubjectToBlock2),
CONTAINS( Subject , $Label.CAS_Name_mailSubjectToBlock3),
CONTAINS( Subject , $Label.CAS_Name_mailSubjectToBlock4),
CONTAINS( Subject , $Label.CAS_Name_mailSubjectToBlock5),
CONTAINS( Subject , $Label.CAS_Name_mailSubjectToBlock6)
)
)</errorConditionFormula>
    <errorMessage>Email bloqué</errorMessage>
</ValidationRule>