force-app/main/default/objects/Case/listViews/Audience_12h_MMAT_new.listView-meta.xml
<ListView>
    <fullName>Audience_12h_MMAT_new</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>NAME</columns>
    <columns>Sous_type__c</columns>
    <columns>Rep_ou_non_rep__c</columns>
    <columns>Nombre_de_controles__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Controle</value>
    </filters>
    <filters>
        <field>Type_de_panel__c</field>
        <operation>notEqual</operation>
        <value>PaME</value>
    </filters>
    <filters>
        <field>Type_de_controle__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>Sous_type__c</field>
        <operation>equals</operation>
        <value>TV On &gt; 12h</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Nouveau,Hiérarchisé</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TV ON +12h MMAT (new)</label>
</ListView>