force-app/main/default/objects/Case/listViews/autre_usage_pame.listView-meta.xml
<ListView>
    <fullName>autre_usage_pame</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Type_de_controle__c</columns>
    <columns>Sous_type_de_controle__c</columns>
    <columns>Rep_ou_non_rep__c</columns>
    <columns>Nombre_de_controles__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Nouveau,Hiérarchisé</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Controle</value>
    </filters>
    <filters>
        <field>Type_de_controle__c</field>
        <operation>equals</operation>
        <value>7</value>
    </filters>
    <filters>
        <field>Type_de_panel__c</field>
        <operation>notEqual</operation>
        <value>mediamat</value>
    </filters>
    <label>autre usage pame</label>
</ListView>