force-app/main/default/objects/Case/listViews/Case_for_CTI_test.listView-meta.xml
<ListView>
    <fullName>Case_for_CTI_test</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Foyer_paneliste__c</field>
        <operation>contains</operation>
        <value>0123456</value>
    </filters>
    <label>Case for CTI test</label>
</ListView>