force-app/main/default/objects/Case/listViews/Contr_les_NR_J3.listView-meta.xml
<ListView>
    <fullName>Contr_les_NR_J3</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Jour_de_traitement__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Controle_AIP,Case.Demande_Paneliste</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Non-répondant</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Clôturé</value>
    </filters>
    <filters>
        <field>CASES.CLOSED_DATE</field>
        <operation>equals</operation>
        <value>10/30/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/30/2023 12:00 AM</value>
    </filters>
    <label>Contrôles NR &gt; J3</label>
</ListView>