force-app/main/default/objects/Case/listViews/Contr_les_Setmeter_Indice_qualit.listView-meta.xml
<ListView>
    <fullName>Contr_les_Setmeter_Indice_qualit</fullName>
    <columns>Foyer_paneliste__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_de_controle__c</field>
        <operation>equals</operation>
        <value>12</value>
    </filters>
    <filters>
        <field>Sous_type_de_controle__c</field>
        <operation>equals</operation>
        <value>38</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Nouveau</value>
    </filters>
    <label>Contrôles Setmeter - Indice qualité</label>
</ListView>