force-app/main/default/objects/Case/listViews/CONTROLE_ROAV3.listView-meta.xml
<ListView>
    <fullName>CONTROLE_ROAV3</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Non-répondant ROAV3</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Nouveau</value>
    </filters>
    <label>CONTROLE ROAV3</label>
</ListView>