force-app/main/default/objects/Case/listViews/Copie_de_Requ_tes_contr_les_Soft_Meter_J_70.listView-meta.xml
<ListView>
    <fullName>Copie_de_Requ_tes_contr_les_Soft_Meter_J_70</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Jour_de_traitement__c</field>
        <operation>greaterOrEqual</operation>
        <value>70</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Inactif Meter J+1</value>
    </filters>
    <label>Requêtes contrôles Soft Meter J+70</label>
</ListView>