force-app/main/default/objects/Case/listViews/Echelon_6_Case.listView-meta.xml
<ListView>
    <fullName>Echelon_6_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Échelon 6</label>
    <queue>Echelon_6</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>