force-app/main/default/objects/Case/listViews/Equipements.listView-meta.xml
<ListView>
    <fullName>Equipements</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>télévis,audimètre,routeur,panne,barre,décodeur,antenne,console,dvd,magnétoscope,écran,tv,télécommande,box,sfr,orange,free,Bouygues,cast,fibre,optique,adsl,déménage,Satellite,câble,hdmi,péritel,canal</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Nouveau,Hiérarchisé</value>
    </filters>
    <label>Équipements</label>
</ListView>